--- a/less/blocks/contact-inf.less
+++ b/less/blocks/contact-inf.less
@@ -30,7 +30,15 @@
     width: 58px;
     height: 58px;
     background-color: #e6e6e6;
+    background-repeat: no-repeat;
+    background-position: center;
   }
+}
+.contact-inf__label:nth-of-type(1)::after {
+  background-image: url("../img/icon-phone.svg");
+}
+.contact-inf__label:nth-of-type(2)::after {
+  background-image: url("../img/icon-mail.svg");
 }
 .contact-inf__label:first-of-type {
   margin-bottom: 40px;
