--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -110,6 +110,12 @@
 .video__subtitle-icon,
 .video__full-screan-icon{
   fill: #5c6870;
+  &:hover {
+    fill: #333333;
+  }
+  &:active {
+    fill: rgba(51, 51, 51, 0.3);
+  }
 }
 @media @mobile {
   .video__video-player {
