--- a/less/blocks/contact-inf.less
+++ b/less/blocks/contact-inf.less
@@ -64,6 +64,7 @@
   padding-right: 58px;
   padding-left: 22px;
   border: 4px solid #f2f2f2;
+  outline: none;
 
   font-size: 18px;
   font-weight: bold;
