--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -23,6 +23,7 @@
   padding-left: 15px;
   padding-right: 10px;
   border: 4px solid #f2f2f2;
+  outline: none;
 
   font-size: 16px;
   font-weight: bold;
