--- a/less/blocks/person.less
+++ b/less/blocks/person.less
@@ -35,6 +35,7 @@
   padding: 14px 0;
   padding-left: 22px;
   border: 4px solid #f2f2f2;
+  outline: none;
 
   font-size: 18px;
   font-weight: bold;
