--- a/less/blocks/features-bridge.less
+++ b/less/blocks/features-bridge.less
@@ -23,7 +23,6 @@
 }
 .features-bridge__title {
   margin: 0;
-  width: 151px;
   align-self: center;
 
   font-size: 18px;
@@ -35,7 +34,6 @@
 }
 .features-bridge__about-features {
   margin: 0;
-  max-width: 220px;
   align-self: center;
 
   font-size: 14px;
@@ -52,6 +50,7 @@
     justify-content: center;
   }
   .features-bridge__picture-layout img {
+    height: 260px;
     width: 320px;
   }
 }
@@ -72,7 +71,11 @@
     height: 100%;
   }
   .features-bridge__title {
+    width: 151px;
     font-size: 21px;
+  }
+  .features-bridge__about-features {
+    max-width: 220px;
   }
   .features-bridge__picture-layout {
     width: 67%;
