--- a/less/blocks/impression.less
+++ b/less/blocks/impression.less
@@ -4,6 +4,7 @@
 }
 .impression__title {
   margin: 0;
+  padding-top: 18px;
   padding-bottom: 37px;
 
   font-size: 18px;
@@ -69,6 +70,7 @@
     padding-left: 20px;
     padding-right: 20px;
   }
+
 }
 @media @tablet {
   .imression__wrap {
