--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -37,6 +37,7 @@
   line-height: 26px;
   text-transform: uppercase;
   color: #ffffff;
+  text-decoration: none;
 
   background-color: #81b3d2;
   cursor: pointer;
