--- a/less/blocks/popup-falure.less
+++ b/less/blocks/popup-falure.less
@@ -49,6 +49,12 @@
   font-weight: bold;
   text-transform: uppercase;
   background-color: #81b3d2;
+  &:hover {
+    background-color: #669ec0;
+  }
+  &:active {
+    background-color: #5496bd;
+  }
 }
 @media @tablet {
   .popup-falure__wrap {
