--- a/less/blocks/promo-view.less
+++ b/less/blocks/promo-view.less
@@ -20,7 +20,10 @@
 }
 .promo-view__logo-title {
   margin: auto;
-  padding-bottom: 21px;
+  padding-bottom: 20px;
+  &--index {
+    padding-bottom: 0;
+  }
 }
 .promo-view__triangle-mobile {
   display: none;
@@ -62,6 +65,7 @@
     &--index {
       width: 460px;
       height: 350px;
+      padding-bottom: 15px;
     }
   }
   .promo-view__triangle-tablet {
@@ -83,6 +87,14 @@
     &--lower {
       height: 301px;
       background-size: auto 518px;
+    }
+  }
+  .promo-view__logo-title {
+    width: 461px;
+    height: 80px;
+    &--index {
+      width: 460px;
+      height: 350px;
     }
   }
   .promo-view__triangle-tablet {
