--- a/less/blocks/contact-inf.less
+++ b/less/blocks/contact-inf.less
@@ -22,23 +22,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  &::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: 0px;
-    width: 58px;
-    height: 58px;
-    background-color: #e6e6e6;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-}
-.contact-inf__label:nth-of-type(1)::after {
-  background-image: url("../img/icon-phone.svg");
-}
-.contact-inf__label:nth-of-type(2)::after {
-  background-image: url("../img/icon-mail.svg");
 }
 .contact-inf__label:first-of-type {
   margin-bottom: 40px;
@@ -59,10 +42,33 @@
   line-height: 26px;
   text-transform: uppercase;
 }
+.contact-inf__input-wrap {
+  position: relative;
+  display: flex;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0px;
+    width: 58px;
+    background-color: #e6e6e6;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+.contact-inf__label:nth-of-type(1) .contact-inf__input-wrap::after {
+  background-image: url("../img/icon-phone.svg");
+  background-size: 18px 18px;
+}
+.contact-inf__label:nth-of-type(2) .contact-inf__input-wrap::after {
+  background-image: url("../img/icon-mail.svg");
+  background-size: 16px 16px;
+}
 .contact-inf__input {
+  flex-grow: 1;
   padding: 15px 0;
-  padding-right: 58px;
-  padding-left: 22px;
+  padding-left: 18px;
   border: 4px solid #f2f2f2;
   outline: none;
 
@@ -71,6 +77,7 @@
 
   background-color: #f2f2f2;
   box-sizing: border-box;
+
   &:hover {
     background-color: #e5e5e5;
     border-color: #e5e5e5;
@@ -80,6 +87,7 @@
     border-color: #e5e5e5;
   }
 }
+
 .contact-inf__input::placeholder {
   font-size: 18px;
   line-height: 26px;
@@ -99,6 +107,7 @@
     display: flex;
     flex-direction: column;
     padding-bottom: 35px;
+    padding-top: 19px;
   }
   .contact-inf__title {
     padding-left: 60px;
@@ -160,7 +169,7 @@
     padding-right: 15px;
     padding-left: 0;
   }
-  .contact-inf__input {
+  .contact-inf__input-wrap {
     flex-grow: 1;
   }
 }
