--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -24,6 +24,11 @@
     background-image: url("../img/icon-map-marker.svg");
   }
 }
+.map__google-sedona {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
 @media @tablet {
   .map__layout {
       background-image: url("../img/bg-map-desktop@1x.jpg");
