--- a/less/blocks/photo.less
+++ b/less/blocks/photo.less
@@ -23,7 +23,7 @@
 }
 .photo__about {
   margin: 0;
-  padding-bottom: 9px;
+  padding-bottom: 7px;
 
   font-size: 14px;
   line-height: 24px;
@@ -36,14 +36,24 @@
   color: inherit;
   text-decoration: none;
 }
+.photo__number-likes-btn,
+.photo__number-likes-numeric {
+  border: none;
+  background-color: inherit;
+  cursor: pointer;
+  padding: 0;
+  font-weight: bold;
+}
+.photo__number-likes-btn {
+  margin-right: 14px;
+}
 .photo__number-likes-icon {
   fill: rgba(0, 0, 0, 0.3);
-  padding-right: 14px;
 }
 @media @mobile {
   .photo__item {
     align-self: center;
-    padding: 22px 20px 15px 20px;
+    padding: 22px 20px 17px 20px;
     border-top: 1px solid #e5e5e5;
   }
   .photo__item:last-of-type {
@@ -80,17 +90,17 @@
     display: flex;
     justify-content: space-between;
     padding: 16px 20px;
-    padding-bottom: 6px;
+    padding-bottom: 15px;
     background-color: #f2f2f2;
   }
   .photo__item:not(:first-of-type) .photo__description {
     padding-right: 35px;
   }
-  .photo__number-likes {
-    padding-top: 12px;
+  .photo__about {
+    padding-bottom: 0;
   }
-  .photo__number-likes-icon {
-    padding-right: 9px;
+  .photo__number-likes-btn {
+    margin-right: 11px;
   }
 }
 @media @desktop {
@@ -104,6 +114,9 @@
     margin-top: -80px;
     color: #ffffff;
     background-color: rgba(0, 0, 0, 0.3);
+  }
+  .photo__number-likes-numeric{
+    color: inherit;
   }
   .photo__number-likes-icon {
     fill: #ffffff;
