--- a/less/blocks/popup-success.less
+++ b/less/blocks/popup-success.less
@@ -56,6 +56,12 @@
   font-weight: bold;
   text-transform: uppercase;
   background-color: #81b3d2;
+  &:hover {
+    background-color: #669ec0;
+  }
+  &:active {
+    background-color: #5496bd;
+  }
 }
 @media @tablet {
   .popup-success__wrap {
