--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -10,8 +10,6 @@
 }
 .video__title {
   margin: 0;
-  padding-top: 33px;
-  padding: 0 20px;
   padding-bottom: 26px;
 
   font-size: 18px;
@@ -20,7 +18,6 @@
 }
 .video__about {
   margin: 0;
-  padding: 0 20px;
 
   font-size: 14px;
   line-height: 24px;
@@ -87,6 +84,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
+  cursor: pointer;
 }
 .video__subtitle {
   padding: 0;
@@ -97,6 +95,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
+  cursor: pointer;
 }
 .video__full-screan {
   padding: 0;
@@ -105,6 +104,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
+  cursor: pointer;
 }
 .video__replay-icon,
 .video__subtitle-icon,
@@ -118,6 +118,9 @@
   }
 }
 @media @mobile {
+  .video__text-wrap {
+    width: 240px;
+  }
   .video__video-player {
     width: 320px;
     height: 201px;
