--- a/less/blocks/features-other.less
+++ b/less/blocks/features-other.less
@@ -68,4 +68,8 @@
   .features-other__layout {
     padding-bottom: 64px;
   }
+  .features-other__layout {
+    padding-left: 60px;
+    padding-right: 60px;
+  }
 }
