--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -13,7 +13,6 @@
   text-align: center;
 }
 .location__about {
-  display: flex;
   margin: 0 auto;
   max-width: 458px;
 
@@ -58,6 +57,9 @@
     padding-bottom: 30px;
     font-size: 30px;
     line-height: 30px;
+  }
+  .location__about-break {
+    display: block;
   }
   .location__button {
     margin-top: 42px;
