--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -55,6 +55,7 @@
 
   background-color: rgba(0, 0, 0, 0.6 );
   box-sizing: border-box;
+  cursor: default;
 }
 .video__remote-line {
   position: relative;
