--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -45,24 +45,11 @@
 }
 .features-place__entertainment-item-layout {
   position: relative;
-  &::before {
-    content: "";
-    position: absolute;
-    width: 39px;
-    height: 37px;
-    left: 0;
-    top: -10px;
-    background-size: 39px 37px;
-  }
 }
-.features-place__entertainment-item-layout:nth-of-type(1)::before {
-  background-image: url("../img/icon-house.svg");
-}
-.features-place__entertainment-item-layout:nth-of-type(2)::before {
-  background-image: url("../img/icon-gift.svg");
-}
-.features-place__entertainment-item-layout:nth-of-type(3)::before {
-  background-image: url("../img/icon-burger.svg");
+.features-place__entertainment-item-icon {
+  position: absolute;
+  left: 1px;
+  top: -5px;
 }
 .features-place__entertainment-item-title {
   margin: 0;
@@ -138,12 +125,13 @@
     height: 256px;
   }
   .features-place__head {
+    display: flex;
+    align-items: center;
     height: 100%;
-    padding: 45px;
+    padding: 45px 41px;
   }
   .features-place__title {
     font-size: 21px;
-    width: 200px;
     align-self: center;
   }
   .features-place__image-layout {
@@ -164,17 +152,28 @@
     width: 33%;
     padding: 0 45px;
     padding-top: 160px;
-    &::before {
-      top: 63px;
-      left: 50%;
-      margin-left: -34px;
-      width: 77px;
-      height: 68px;
-      background-size: 77px 68px;
-    }
   }
   .features-place__entertainment-item-layout:nth-of-type(2) {
     order: 3;
+  }
+  .features-place__entertainment-item-icon {
+    left: 50%;
+    top: 59px;
+  }
+  .features-place__entertainment-item-layout:nth-of-type(1) .features-place__entertainment-item-icon {
+    width: 75px;
+    height: 72px;
+    margin-left: -38px
+  }
+  .features-place__entertainment-item-layout:nth-of-type(2) .features-place__entertainment-item-icon {
+    width: 64px;
+    height: 75px;
+    margin-left: -38px
+  }
+  .features-place__entertainment-item-layout:nth-of-type(3) .features-place__entertainment-item-icon {
+    width: 77px;
+    height: 68px;
+    margin-left: -39px
   }
   .features-place__entertainment-item-title {
     padding-bottom: 20px;
@@ -184,5 +183,12 @@
 @media @desktop {
   .features-place__head {
     padding: 13%;
+  }
+  .features-place__entertainment-item-layout {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .features-place__entertainment-item-about--break {
+    display: block;
   }
 }
