--- a/less/style.less
+++ b/less/style.less
@@ -5,6 +5,7 @@
 @import "global/scaffolding.less";
 
 @import "blocks/attraction.less";
+@import "blocks/background-wrap.less";
 @import "blocks/contact-inf.less";
 @import "blocks/emotions.less";
 @import "blocks/explanation.less";
