--- a/less/blocks/popup-success.less
+++ b/less/blocks/popup-success.less
@@ -7,7 +7,6 @@
   }
 }
 .popup-success__wrap {
-  .container();
   position: fixed;
   z-index: 2;
   top: 50%;
@@ -26,7 +25,7 @@
 .popup-success__title {
   margin: 0;
   padding-bottom: 25px;
-  font-size: 18px;
+  font-size: 18px;c
   line-height: 26px;
   text-align: center;
 }
