change browsers bugs

--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -182,7 +182,7 @@
 }
 @media @desktop {
   .features-place__head {
-    padding: 13%;
+    padding: 52px;
   }
   .features-place__entertainment-item-layout {
     padding-left: 50px;
