--- a/less/blocks/photo.less
+++ b/less/blocks/photo.less
@@ -39,7 +39,7 @@
 .photo__number-likes-btn,
 .photo__number-likes-numeric {
   border: none;
-  background-color: inherit;
+  background-color: transparent;
   cursor: pointer;
   padding: 0;
   font-weight: bold;
