--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -14,6 +14,7 @@
 }
 .location__about {
   margin: 0 auto;
+  padding-bottom: 35px;
   max-width: 458px;
 
   font-size: 14px;
@@ -27,7 +28,6 @@
   width: 100%;
   max-width: 458px;
   margin: 0 auto;
-  margin-top: 35px;
   margin-bottom: 49px;
   padding: 16px 0;
   border: 0;
@@ -61,14 +61,18 @@
   .location__about-break {
     display: block;
   }
+  .location__about {
+    padding-bottom: 42px;
+  }
   .location__button {
-    margin-top: 42px;
     margin-bottom: 57px;
   }
 }
 @media @desktop {
+    .location__about {
+      padding-bottom: 47px;
+    }
     .location__button {
-      margin-top: 47px;
       margin-bottom: 67px;
     }
 }
