--- a/less/blocks/main-title.less
+++ b/less/blocks/main-title.less
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  .container();
+  margin-left: auto;
+  margin-right: auto;
 }
 .main-title__title {
   margin: 0;
