--- a/less/blocks/promo-view.less
+++ b/less/blocks/promo-view.less
@@ -10,6 +10,18 @@
   background-position: bottom center;
   background-size: cover;
   box-sizing: border-box;
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    height: 28px;
+
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
   &--lower {
     height: 158px;
     background-size: auto 389px;
@@ -25,15 +37,6 @@
     padding-bottom: 0;
   }
 }
-.promo-view__triangle-mobile {
-  display: none;
-}
-.promo-view__triangle-tablet {
-  display: none;
-}
-.promo-view__triangle-desktop {
-  display: none;
-}
 @media @mobile {
   .promo-view__logo-title {
     width: 229px;
@@ -42,12 +45,6 @@
       width: 282px;
       height: 214px;
     }
-  }
-  .promo-view__triangle-mobile {
-    position: absolute;
-    display: block;
-    bottom: -1px;
-    fill: #ffffff;
   }
 }
 @media @tablet {
@@ -58,6 +55,10 @@
       height: 290px;
       background-size: auto 518px;
     }
+    &::after {
+      height: 57px;
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+    }
   }
   .promo-view__logo-title {
     height: 78px;
@@ -67,14 +68,6 @@
       height: 350px;
       padding-bottom: 15px;
     }
-  }
-  .promo-view__triangle-tablet {
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    right: 0;
-    display: block;
-    fill: #ffffff;
   }
   @media @retina {
     .promo-view__slogan-layout {
@@ -88,6 +81,10 @@
       height: 301px;
       background-size: auto 518px;
     }
+    &::after {
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+      left: -1px;
+    }
   }
   .promo-view__logo-title {
     width: 461px;
@@ -96,16 +93,5 @@
       width: 460px;
       height: 350px;
     }
-  }
-  .promo-view__triangle-tablet {
-    display: none;
-  }
-  .promo-view__triangle-desktop {
-    position: absolute;
-    bottom: -1px;
-    left: -1px;
-    right: 0;
-    display: block;
-    fill: #ffffff;
   }
 }
